--- a/src/pages/status/status.html
+++ b/src/pages/status/status.html
@@ -49,7 +49,7 @@
       <ion-note item-right></ion-note>
     </ion-item>
     <ion-item color="none" id="status-list-item24">
-      Max Effort Points
+      Max Fatigue Points
       <ion-note item-right></ion-note>
     </ion-item>
   </ion-list>
