Last Status change

--- a/src/pages/character-status/character-status.html
+++ b/src/pages/character-status/character-status.html
@@ -3,24 +3,26 @@
     <ion-title>
       Character Status
     </ion-title>
-      <ion-note>
-        Current Points: {{new_char.current_points}}<br>
-        Max Points: {{new_char.max_points}}
-      </ion-note>
+    <ion-note>
+      Current Points: {{new_char.current_points}}
+      <br> Max Points: {{new_char.max_points}}
+    </ion-note>
   </ion-navbar>
 </ion-header>
 <ion-content padding id="characterStatus">
   <form id="characterStatus-form">
     <ion-item id="characterStatus-range_strenght">
-      <ion-range [(ngModel)]="new_char.strenght" [ngModelOptions]="{standalone: true}" min="{{new_char.min_status}}" max="{{max_strenght}}" step="1" (ionChange)="updateStrenght()">
-      <ion-label range-left>
-        Strength (ST)
-      </ion-label>
-      <ion-note range-right>{{new_char.strenght}}</ion-note>
+      <ion-range [(ngModel)]="new_char.strenght" [ngModelOptions]="{standalone: true}" min="{{new_char.min_status}}" max="{{max_strenght}}"
+        step="1" (ionChange)="updateStrenght()">
+        <ion-label range-left>
+          Strength (ST)
+        </ion-label>
+        <ion-note range-right>{{new_char.strenght}}</ion-note>
       </ion-range>
     </ion-item>
     <ion-item id="characterStatus-range_dexterity">
-      <ion-range [(ngModel)]="new_char.dexterity" [ngModelOptions]="{standalone: true}" min="{{new_char.min_status}}" max="{{max_dexterity}}" step="1" (ionChange)="updateDexterity()">
+      <ion-range [(ngModel)]="new_char.dexterity" [ngModelOptions]="{standalone: true}" min="{{new_char.min_status}}" max="{{max_dexterity}}"
+        step="1" (ionChange)="updateDexterity()">
         <ion-label range-left>
           Dexterity (DX)
         </ion-label>
@@ -28,7 +30,8 @@
       </ion-range>
     </ion-item>
     <ion-item id="characterStatus-range_char_intelligence">
-      <ion-range [(ngModel)]="new_char.intelligence" [ngModelOptions]="{standalone: true}" min="{{new_char.min_status}}" max="{{max_intelligence}}" step="1" (ionChange)="updateIntelligence()">
+      <ion-range [(ngModel)]="new_char.intelligence" [ngModelOptions]="{standalone: true}" min="{{new_char.min_status}}" max="{{max_intelligence}}"
+        step="1" (ionChange)="updateIntelligence()">
         <ion-label range-left>
           Intelligence (IQ)
         </ion-label>
@@ -36,7 +39,8 @@
       </ion-range>
     </ion-item>
     <ion-item id="characterStatus-range_char_health">
-      <ion-range [(ngModel)]="new_char.health" [ngModelOptions]="{standalone: true}" min="{{new_char.min_status}}" max="{{max_health}}" step="1" (ionChange)="updateHealth()">
+      <ion-range [(ngModel)]="new_char.health" [ngModelOptions]="{standalone: true}" min="{{new_char.min_status}}" max="{{max_health}}"
+        step="1" (ionChange)="updateHealth()">
         <ion-label range-left>
           Health (HT)
         </ion-label>
@@ -45,7 +49,8 @@
     </ion-item>
     <div class="spacer" style="height:40px;" id="characterStatus-spacer"></div>
     <ion-item id="characterStatus-range_char_max_life_points">
-      <ion-range [(ngModel)]="new_char.max_life_points" [ngModelOptions]="{standalone: true}" min="{{new_char.strenght}}" max="{{max_life_points}}" step="1" (ionChange)="updateLifePoints()">
+      <ion-range [(ngModel)]="new_char.max_life_points" [ngModelOptions]="{standalone: true}" min="{{new_char.strenght}}" max="{{max_life_points}}"
+        step="1" (ionChange)="updateLifePoints()">
         <ion-label range-left>
           Life Points
         </ion-label>
@@ -53,7 +58,8 @@
       </ion-range>
     </ion-item>
     <ion-item id="characterStatus-range_char_will">
-      <ion-range [(ngModel)]="new_char.will" [ngModelOptions]="{standalone: true}" min="{{new_char.intelligence}}" max="{{max_will}}" step="1" (ionChange)="updateWill()">
+      <ion-range [(ngModel)]="new_char.will" [ngModelOptions]="{standalone: true}" min="{{new_char.intelligence}}" max="{{max_will}}"
+        step="1" (ionChange)="updateWill()">
         <ion-label range-left>
           Will
         </ion-label>
@@ -61,7 +67,8 @@
       </ion-range>
     </ion-item>
     <ion-item id="characterStatus-range_char_perception">
-      <ion-range [(ngModel)]="new_char.perception" [ngModelOptions]="{standalone: true}" min="{{new_char.intelligence}}" max="{{max_perception}}" step="1" (ionChange)="updatePerception()">
+      <ion-range [(ngModel)]="new_char.perception" [ngModelOptions]="{standalone: true}" min="{{new_char.intelligence}}" max="{{max_perception}}"
+        step="1" (ionChange)="updatePerception()">
         <ion-label range-left>
           Perception
         </ion-label>
@@ -69,7 +76,8 @@
       </ion-range>
     </ion-item>
     <ion-item id="characterStatus-range_char_max_fatigue_points">
-      <ion-range [(ngModel)]="new_char.max_fatigue_points" [ngModelOptions]="{standalone: true}" min="{{new_char.health}}" max="{{max_fatigue_points}}" step="1" (ionChange)="updateFatiguePoints()">
+      <ion-range [(ngModel)]="new_char.max_fatigue_points" [ngModelOptions]="{standalone: true}" min="{{new_char.health}}" max="{{max_fatigue_points}}"
+        step="1" (ionChange)="updateFatiguePoints()">
         <ion-label range-left>
           Fatigue Points
         </ion-label>
@@ -77,7 +85,8 @@
       </ion-range>
     </ion-item>
     <ion-item id="characterStatus-range_char_basic_speed">
-      <ion-range [(ngModel)]="speed_aux" [ngModelOptions]="{standalone: true}" min="{{min_speed_aux}}" max="{{max_speed_aux}}" step="1" (ionChange)="updateSpeed()">
+      <ion-range [(ngModel)]="speed_aux" [ngModelOptions]="{standalone: true}" min="{{min_speed_aux}}" max="{{max_speed_aux}}"
+        step="1" (ionChange)="updateSpeed()">
         <ion-label range-left>
           Speed
         </ion-label>
@@ -85,7 +94,8 @@
       </ion-range>
     </ion-item>
     <ion-item id="characterStatus-range_char_basic_movement">
-      <ion-range [(ngModel)]="new_char.basic_movement" [ngModelOptions]="{standalone: true}" min="new_char.getMinBasicMovement()" max="{{max_basic_movement}}" step="1" (ionChange)="updateBasicMovement()">
+      <ion-range [(ngModel)]="new_char.basic_movement" [ngModelOptions]="{standalone: true}" min="{{min_basic_movement}}" max="{{max_basic_movement}}"
+        step="1" (ionChange)="updateBasicMovement()">
         <ion-label range-left>
           Basic Movement
         </ion-label>
