--- a/src/pages/character-languages/character-languages.html
+++ b/src/pages/character-languages/character-languages.html
@@ -13,7 +13,7 @@
         <ion-item color="none">
           {{language.name}}
           <br>
-          <ion-note item-down>{{language.level.description}}</ion-note>
+          <ion-note>{{language.level.description}}</ion-note>
           <ion-note item-right>Swipe left</ion-note>
         </ion-item>
         <ion-item-options side="right">
