--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -2,4 +2,16 @@
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+  testsRoot = TestsPage;
+  statusRoot = StatusPage;
+  extrasRoot = ExtrasPage;
+  skillsRoot = SkillsPage;
+  inventoryRoot = InventoryPage;
+  equipmentsRoot = EquipmentsPage;
+  <ion-tab [root]="testsRoot" tabTitle="Tests" tabIcon="ion-cube"></ion-tab>
+  <ion-tab [root]="statusRoot" tabTitle="Status" tabIcon="ion-stats"></ion-tab>
+  <ion-tab [root]="extrasRoot" tabTitle="Extras" tabIcon="ion-bookmark"></ion-tab>
+  <ion-tab [root]="skillsRoot" tabTitle="Skills" tabIcon="ion-star"></ion-tab>
+  <ion-tab [root]="inventoryRoot" tabTitle="Inventory" tabIcon="ion-chest"></ion-tab>
+  <ion-tab [root]="equipmentsRoot" tabTitle="Equipments" tabIcon="ion-body"></ion-tab>
 </ion-tabs>
