--- a/src/pages/character-advantages/character-advantages.html
+++ b/src/pages/character-advantages/character-advantages.html
@@ -8,21 +8,34 @@
 <ion-content padding id="characterAdvantages">
   <form id="characterAdvantages-form">
     <ion-list id="characterAdvantages-list">
-        <ion-item-sliding>
-          <ion-item color="none" id="characterAdvantages-list-item">
-            Add Advantage
-            <ion-note item-right>Swipe left</ion-note>
-          </ion-item>
-          <ion-item-options side="left">
-            <button ion-button color="secondary">
-              Add
-            </button>
-            <button ion-button color="danger">
-              Remove
-            </button>
-          </ion-item-options>
-        </ion-item-sliding>
-      </ion-list>
+      <ion-item-sliding *ngFor="let advantage of new_char.advantages">
+        <!-- Character advantages -->
+        <ion-item color="none">
+          {{advantage.name}}
+          <br>
+          <ion-note>{{advantage.description}}</ion-note>
+          <ion-note item-right>Swipe left</ion-note>
+        </ion-item>
+        <ion-item-options side="right">
+          <button ion-button color="danger" on-click="removeAdvantage(advantage)">
+            Remove
+          </button>
+        </ion-item-options>
+      </ion-item-sliding>
+      <!-- Add a new advantage to the list -->
+      <ion-item-sliding>
+        <ion-item color="none" id="characterAdvantage-list-item">
+          Add Advantage
+          <ion-note item-right>Swipe left</ion-note>
+        </ion-item>
+        <ion-item-options side="right">
+          <button ion-button color="secondary" on-click="addAdvantage()">
+            Add
+          </button>
+        </ion-item-options>
+      </ion-item-sliding>
+      <!-- End list -->
+    </ion-list>
     <button id="characterAdvantages-button" ion-button color="stable" block on-click="goToCharacterDisadvantages()">
       Proceed
     </button>
