--- a/src/pages/character-disadvantages/character-disadvantages.html
+++ b/src/pages/character-disadvantages/character-disadvantages.html
@@ -8,20 +8,32 @@
 <ion-content padding id="characterDisadvantages">
   <form id="characterDisadvantages-form">
     <ion-list id="characterDisadvantages-list">
-        <ion-item-sliding>
-          <ion-item color="none" id="characterDisadvantages-list-item">
-            Add Disadvantages
-            <ion-note item-right>Swipe left</ion-note>
-          </ion-item>
-          <ion-item-options side="left">
-            <button ion-button color="secondary">
-              Add
-            </button>
-            <button ion-button color="danger">
-              Remove
-            </button>
-          </ion-item-options>
-        </ion-item-sliding>
+        <ion-item-sliding *ngFor="let disadvantage of new_char.disadvantages">
+            <!-- Character disadvantages -->
+            <ion-item color="none">
+              {{disadvantage.name}}
+              <br>
+              <ion-note>{{disadvantage.description}}</ion-note>
+              <ion-note item-right>Swipe left</ion-note>
+            </ion-item>
+            <ion-item-options side="right">
+              <button ion-button color="danger" on-click="removeDisadvantage(disadvantage)">
+                Remove
+              </button>
+            </ion-item-options>
+          </ion-item-sliding>
+          <!-- Add a new disadvantage to the list -->
+          <ion-item-sliding>
+            <ion-item color="none" id="characterDisadvantage-list-item">
+              Add Disadvantage
+              <ion-note item-right>Swipe left</ion-note>
+            </ion-item>
+            <ion-item-options side="right">
+              <button ion-button color="secondary" on-click="addDisadvantage()">
+                Add
+              </button>
+            </ion-item-options>
+          </ion-item-sliding>
       </ion-list>
     <button id="characterDisadvantages-button" ion-button color="stable" block on-click="goToCharacterResume()">
       Proceed
