--- a/src/pages/character-skills/character-skills.html
+++ b/src/pages/character-skills/character-skills.html
@@ -8,21 +8,37 @@
 <ion-content padding id="characterSkills">
   <form id="characterSkills-form">
     <ion-list id="characterSkills-list">
-        <ion-item-sliding>
-          <ion-item color="none" id="characterSkills-list-item">
-            Add Language
-            <ion-note item-right>Swipe left</ion-note>
-          </ion-item>
-          <ion-item-options side="left">
-            <button ion-button color="secondary">
-              Add
-            </button>
-            <button ion-button color="danger">
-              Remove
-            </button>
-          </ion-item-options>
-        </ion-item-sliding>
+      <!--  -->
+      <ion-item-sliding *ngFor="let skill of new_char.skills">
+        <!-- Character languages -->
+        <ion-item color="none">
+          {{skill.name}}  <ion-note>{{skill.difficulty.description}}+{{skill.level}}</ion-note>
+          <br>
+          <ion-note>{{skill.description}}</ion-note>
+          <br>
+          <ion-note>{{skill.difficulty.level.description}}</ion-note>
+          <ion-note item-right>Swipe left</ion-note>
+        </ion-item>
+        <ion-item-options side="right">
+          <button ion-button color="danger" on-click="removeSkill(skill)">
+            Remove
+          </button>
+        </ion-item-options>
+      </ion-item-sliding>
+      <!-- Add a new language to the list -->
+      <ion-item-sliding>
+        <ion-item color="none" id="characterSkills-list-item">
+          Add Skill
+          <ion-note item-right>Swipe left</ion-note>
+        </ion-item>
+        <ion-item-options side="right">
+          <button ion-button color="secondary" on-click="addSkill()">
+            Add
+          </button>
+        </ion-item-options>
+      </ion-item-sliding>
     </ion-list>
+    <!-- End list -->
     <button id="characterSkills-button" ion-button color="stable" block on-click="goToCharacterAdvantages()">
       Proceed
     </button>
