--- a/src/pages/status/status.html
+++ b/src/pages/status/status.html
@@ -44,13 +44,13 @@
       Will
       <ion-note item-right>{{char.will}}</ion-note>
     </ion-item>
-    <ion-item color="none" id="status-list-item22">
+    <ion-item color="none" id="status-perception">
       Perception
-      <ion-note item-right></ion-note>
+      <ion-note item-right>{{char.perception}}</ion-note>
     </ion-item>
-    <ion-item color="none" id="status-list-item24">
+    <ion-item color="none" id="status-max-fatigue-points">
       Max Fatigue Points
-      <ion-note item-right></ion-note>
+      <ion-note item-right>{{char.max_fatigue_points}}</ion-note>
     </ion-item>
   </ion-list>
 </ion-content>
