--- a/src/pages/equipments/equipments.html
+++ b/src/pages/equipments/equipments.html
@@ -26,29 +26,29 @@
         <ion-note item-right>{{equipment.name}}</ion-note>
       </ion-item>
     </ion-item-sliding>
-    <ion-item color="none" id="equipments-list-item40">
+    <ion-item color="none" id="equipments-item-head">
       Head
-      <ion-note item-right></ion-note>
+      <ion-note item-right>{{char.equipments.head.name}}</ion-note>
     </ion-item>
-    <ion-item color="none" id="equipments-list-item42">
+    <ion-item color="none" id="equipments-item-torax">
       Torax
-      <ion-note item-right></ion-note>
+      <ion-note item-right>{{char.equipments.torax.name}}</ion-note>
     </ion-item>
-    <ion-item color="none" id="equipments-list-item43">
+    <ion-item color="none" id="equipments-item-legs">
       Legs
-      <ion-note item-right></ion-note>
+      <ion-note item-right>{{char.equipments.legs.name}}</ion-note>
     </ion-item>
-    <ion-item color="none" id="equipments-list-item44">
+    <ion-item color="none" id="equipments-item-feet">
       Feet
-      <ion-note item-right></ion-note>
+      <ion-note item-right>{{char.equipments.feet.name}}</ion-note>
     </ion-item>
-    <ion-item color="none" id="equipments-list-item45">
+    <ion-item color="none" id="equipments-item-arms">
       Arms
-      <ion-note item-right></ion-note>
+      <ion-note item-right>{{char.equipments.arms.name}}</ion-note>
     </ion-item>
-    <ion-item color="none" id="equipments-list-item46">
+    <ion-item color="none" id="equipments-item-hands">
       Hands
-      <ion-note item-right></ion-note>
+      <ion-note item-right>{{char.equipments.hands.name}}</ion-note>
     </ion-item>
   </ion-list>
 </ion-content>
