--- a/src/pages/character-skills/character-skills.html
+++ b/src/pages/character-skills/character-skills.html
@@ -10,7 +10,7 @@
     <ion-list id="characterSkills-list">
       <!--  -->
       <ion-item-sliding *ngFor="let skill of new_char.skills">
-        <!-- Character languages -->
+        <!-- Character skills -->
         <ion-item color="none">
           {{skill.name}}  <ion-note>{{skill.difficulty.description}}+{{skill.level}}</ion-note>
           <br>
