--- a/src/pages/inventory/inventory.html
+++ b/src/pages/inventory/inventory.html
@@ -10,29 +10,19 @@
     </ion-title>
     <ion-buttons end>
       <button ion-button>
-        #char_name
+        {{char.name}}
       </button>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
-<ion-content padding id="page14">
-  <h3 id="inventory-heading11" style="color:#000000;">
-    Movement
-  </h3>
-  <ion-list id="inventory-list22">
-    <ion-item-sliding>
-      <ion-item color="none" id="inventory-list-item47">
-        Add Item
-        <ion-note item-right></ion-note>
+<ion-content padding id="inventory">
+  <ion-list id="inventory-list">
+    <ion-item-sliding *ngFor="let item of char.inventory">
+      <ion-item color="none">
+        {{item.name}}
+        <br>
+        <ion-note>{{item.quantity}}</ion-note>
       </ion-item>
-      <ion-item-options side="left">
-        <button ion-button color="balanced">
-          Add
-        </button>
-        <button ion-button color="assertive">
-          Remove
-        </button>
-      </ion-item-options>
     </ion-item-sliding>
   </ion-list>
 </ion-content>
